observation map fix spinner overflow

--- a/src/app/shared-modules/observation-map/observation-map/obs-map-list/obs-map-list.component.scss
+++ b/src/app/shared-modules/observation-map/observation-map/obs-map-list/obs-map-list.component.scss
@@ -3,7 +3,6 @@
 
 .list-spinner {
     position:absolute;
-    height:100%;
     width:100%;
     top: 300px;
     z-index: 10000;
